--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  media_kit: ^1.1.11
+  media_kit_video: ^1.2.5
+  media_kit_native_event_loop: ^1.0.9
+  media_kit_libs_video: ^1.0.5
 
 dev_dependencies:
   flutter_test:
