before trying pip_view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   media_kit_video: ^1.2.5
   media_kit_native_event_loop: ^1.0.9
   media_kit_libs_video: ^1.0.5
+  flutter_in_app_pip: ^1.7.4
+  pip_view: ^0.9.7
 
 dev_dependencies:
   flutter_test:
