--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
     <application
         android:label="playlist_flutter"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true"
+    >
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -43,4 +45,12 @@
         </intent>
     </queries>
      <uses-permission android:name="android.permission.INTERNET"/>
+     <uses-permission
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+             />
+      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+      <uses-permission android:name="android.permission.CAMERA"/>
+       <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+
 </manifest>
