--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   permission_handler: ^11.3.1
   get_thumbnail_video: ^0.7.3
   file_picker: ^8.1.4
+  http: ^1.2.2
+  html: ^0.15.5
+  html_parser_plus: ^0.1.4
 
 dev_dependencies:
   flutter_test:
